# batch-uniprot

backend/: package-lock.json  package.json  wrangler.toml
backend/src/: index.js
backend_rs/: Cargo.toml
backend_rs/fixtures/: query.json
backend_rs/src/: lib.rs  main.rs
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: comments.ts
frontend/src/components/: UniprotComment.vue
