[package]
name = "backend_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
reqwest = { version = "0.11.11", features = ["gzip", "json", "stream", "brotli"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_derive = "1.0.144"
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["tokio-macros", "rt-multi-thread", "macros"] }
tokio-test = "0.4.2"
